# astromeric

./: .dockerignore  .env.example  .env.production  .eslintignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .railwayignore  ACCESSIBILITY_AUDIT.md  ANALYSIS.md  ANON_USER_FEATURE.md  CLEANUP_SUMMARY.md  COOKIE_POLICY_IMPLEMENTATION.md  COOKIE_POLICY_SUMMARY.md  COOKIE_QUICK_REFERENCE.md  DEPLOY.md  DEPLOYMENT_ANON_FEATURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_PRIVACY.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_FINAL.md  DEPLOYMENT_LIVE.md  DEPLOYMENT_PWA_STATUS.md  Dockerfile  Dockerfile.frontend  Dockerfile.minimal  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE_PRIVACY.md  IMPLEMENTATION_FINAL_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATES.md  PROGRESS_FINAL_SUMMARY.md  QUICK_REFERENCE.md  QUICK_REFERENCE_UPDATES.md  RAILWAY.md  README.md  V1_MIGRATION_COMPLETE.md  V2_ROUTERS_COMPLETE.md  (+24 more)
AstroNumeric-Android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
AstroNumeric-Android/app/src/main/cpp/: CMakeLists.txt  swiss_ephemeris_jni.cpp
AstroNumeric-iOS/: AppStorePositioning.md  Package.swift  ProductionReadinessChecklist.md  README.md  add_premium_files.rb  project.yml
assets/: index.CQhDUU_Y.css
backend/: Dockerfile  Procfile  __init__.py  pytest.ini  requirements-dev.txt  requirements.txt
cypress/: tsconfig.json
docs/: QUICK_REFERENCE.md  README.md
functions/: _middleware.ts
js/: index.JkEtW4Oq.js
public/: _headers  _redirects  manifest.json  sw.js  (+3 more)
(+625 files in other folders)
